[metadata]
name = manifestly
version = attr: manifestly.__version__
description = Manifestly is a Python package designed to generate a manifest of a directory's contents, capturing file paths and their corresponding hashes. This allows for precise synchronization between two directories based on their content, ensuring that only files with differences in content are synchronized. This package provides a reliable solution for tracking and managing file changes efficiently.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gdoermann/manifestly
author = Greg Doermann
author_email = manifestly@doermann.me
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Source = https://github.com/gdoermann/manifestly
    Tracker = https://github.com/gdoermann/manifestly/issues

[options]
python_requires = >=3.8
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    botocore~=1.29
    boto3~=1.26
    click
    fsspec
    s3fs

package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
extras =
    tox~=4.14.2
    wheel
    ipython
    flake8~=6.0.0
    twine
    pytest
    pip-tools
    bumpver
    coverage

[flake8]
exclude = build,.git,.tox,./tests/.env
extend-ignore = E203
max-line-length = 120

[coverage:run]
omit =
    src/tests/*
